samples/_failures_safe/1761416208_0a49d7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_61991244.c: In function ‘main’:
./samples/SAFE/__tmp_61991244.c:188:5: error: expected declaration or statement at end of input
  188 |     int token_count = tokenize(input, tokens, MAX_TOKENS);
      |     ^~~
